# house_price_api

./: Dockerfile  README.md  pyproject.toml
notebooks/: data_exploration.ipynb
scripts/: api.py
