[tool.poetry]
name = "house-price-predictor"
version = "0.1.0"
description = ""
authors = ["Siva Karthikeya <writetokarthikeya99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
jupyterlab = "^4.3.5"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
